k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: bookcloud
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
